assets/css/style.css
/* ... */
.msg {
  width: 100%;
  margin: 5px auto;
  padding: 8px;
  border-radius: 5px;
  list-style: none;
}

.success {
  color: #3a6e3a;
  border: 1px solid #3a6e3a;
  background-color: #bcf5bc;
}

.error {
  color: #884b4b;
  border: 1px solid #884b4b;
  background-color: #f5bcbc;
}

/* NAVBAR */

header {
  background: rgb(114, 156, 142);
  height: 66px;
}

header * {
  color: white;
}

header .logo {
  float: left;
  height: inherit;
  margin-left: 2em;
}

header .logo-text {
  margin: 9px;
  font-family: 'Candal', serif;
}

header .logo-text span {
  color: #05f7ff;
}

header ul {
  float: right;
  margin: 0px;
  padding: 0px;
  list-style: none;
}

header .menu-toggle {
  display: none;
}

header ul li {
  float: left;
  position: relative;
}

header ul li ul {
  position: absolute;
  top: 66px;
  right: 0px;
  width: 180px;
  display: none;
  z-index: 99999;
}

header ul li:hover ul {
  display: block;
}

header ul li ul li {
  width: 100%;
}

header ul li ul li a {
  padding: 10px;
  background: white;
  color: #444;
}

header ul li ul li a.logout {
  color: red;
}

header ul li ul li a:hover {
  background: #03644481;
}

header ul li a {
  display: block;
  padding: 22px;
  font-size: 1.1em;
  text-decoration: none;
}

header ul li a:hover {
  background: #013b3d;
  transition: 1s;
}

.page-wrapper a:hover {
  color: #0e94a0;
}

.page-wrapper {
  min-height: 50%;
}

/* Post Slider */

.post-slider {
  position: relative;
  padding: 0 50px; /* Create space for the buttons */
}

.post-slider .next {
  position: absolute;
  top: 50%;
  font-size: 2em;
  right: 30px;
  color: #006668;
  cursor: pointer;
}

.post-slider .prev {
  position: absolute;
  top: 50%;
  left: 30px;
  font-size: 2em;
  color: #006668;
  cursor: pointer;
}

.post-slider .next,
.post-slider .prev {
  top: 50%;
  transform: translateY(-50%); /* Perfectly center them vertically */
  z-index: 10;
}

.post-slider .post-wrapper {
  width: 84%;
  height: 350px;
  margin: 0px auto;
  overflow: hidden;
  padding: 10px 0px 10px 0px;
}

.post-slider .slider-title {
  text-align: center;
  margin: 30px auto;
}

.post-slider .post-wrapper .post {
  background: #05f7ff;
  display: flex;
  flex-direction: column;
  width: 300px;
  height: auto;
  min-height: 350px;
  margin: 0px 10px;
  background: white;
  border-radius: 5px;
  box-shadow: 1rem 1rem 1rem -1rem #a0a0a044;
}

.post-slider .post-wrapper .post-info {
  height: 130px;
  padding: 0px 5px;
}

.post-slider .post-wrapper .post .slider-image {
  width: 100%;
  height: 200px;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

.post-slider .post-wrapper .post .post-info {
  height: auto; /* Allow text to breathe */
  padding: 10px;
}

/* // Post Slider */

/* CONTENT */

.content {
  width: 90%;
  margin: 30px auto 30px;
}

.content .main-content {
  width: 70%;
  float: left;
}

.content .main-content.single {
  background: white;
  padding: 20px 50px;
  font-size: 1.3rem;
  border-radius: 5px;
  border: 2px solid goldenrd;
}

.content .main-content.single .post-title {
  text-align: center;
  margin-bottom: 40px;
}

.content .main-content .post {
  width: 95%;
  height: auto; /* Change from 270px to auto to stop bleeding */
  min-height: 270px;
  margin: 20px auto;
  padding-bottom: 50px; /* Space for the absolute button */
  border-radius: 5px;
  background: white;
  position: relative;
  display: flex;
  flex-direction: column;
}

/* Popular Posts */

.content .popular .post {
  margin-top: 10px;
  padding-top: 10px;
}

.content .popular .post img {
  height: 60px;
  width: 60px;
  float: left;
  margin-right: 10px;
}

/* //Popular Posts */

.content .main-content .post .read-more {
  position: absolute;
  bottom: 10px;
  right: 10px;
  left: 10px; /* Spread it across the bottom as requested */
  text-align: center;
}

.content .main-content .post .read-more:hover {
  background: #0d474d;
  color: white !important;
  transition: 0.26s;
}

.content .main-content .post .post-image {
  width: 100%;
  height: 200px;
  float: none;
}

.content .main-content .post .post-preview {
  width: 100%;
  padding: 10px;
  float: none;
}

.content .sidebar {
  width: 30%;
  float: left;
}

.content .sidebar.single {
  padding: 0px 10px;
}

.content .main-content .recent-post {
  margin: 20px;
}

.content .sidebar .section {
  background: white;
  padding: 20px;
  border-radius: 10px;
  margin-bottom: 20px;
}

.content .sidebar .section.popular {
  border: 2px solid blu;
}

.content .sidebar .section-title {
  margin: 10px 0px 10px 0px;
}

.content .sidebar .section.search {
  margin-top: 80px;
}

.content .sidebar .section.topics ul {
  margin: 0px;
  padding: 0px;
  list-style: none;
  border-bottom: 1px solid #0d474d;
}

.content .sidebar .section.topics ul li a {
  display: block;
  border-bottom: 1px solid #0d474d;
  padding: 15px 0px 15px 0px;
  transition: all 0.3s;
}

.content .sidebar .section.topics ul li a:hover {
  padding-left: 15px;
  transition: all 0.3s;
}

/* Auth Pages */

.auth-content {
  width: 30%;
  margin: 50px auto;
  padding: 20px;
  background: white;
  border-radius: 5px;
}

.auth-content form div {
  margin-bottom: 10px;
}

.auth-content form p {
  text-align: center;
}

.auth-content form p a {
  text-decoration: underline;
}

.form-title {
  text-align: center;
}
/* //Auth Pages */

/* Footer */

.footer {
  background: #303036;
  color: #d3d3d3;
  height: 450px;
  position: relative;
}

.footer .footer-content {
  height: 350px;
  display: flex;
}

.footer .footer-content .footer-section {
  flex: 1;
  padding: 25px;
}

.footer .footer-bottom {
  background: #343a40;
  color: #686868;
  text-align: center;
  position: absolute;
  bottom: 0px;
  left: 0px;
  padding-top: 10px;
  height: 50px;
  width: 100%;
}

.footer .footer-content h1,
.footer .footer-content h2 {
  color: white;
}

.footer .footer-content .about h1 span {
  color: #05f7ff;
}
/* ... */

